# webserv

./: .gitignore  AHttpParser.cpp  AHttpParser.hpp  CMakeLists.txt  DEBUG_Parse_request.cpp  Dockerfile  Makefile  README.md  Server.cpp  Server.hpp  basic_client.cpp  chunk4  main.cpp  request.txt  src.mk  updateHTML.sh  webserv.conf
.github/workflows/: main.yml  test.yml
assets/: CGI.py  local_webserv.conf  webserv.conf
assets/LeuleuWebsite/: 404.html  fABCD  index.html
assets/LeuleuWebsite/abc/: 404.html
assets/LeuleuWebsite/abcde/: abcde.html
assets/LeuleuWebsite/cookies/: cookies.html
assets/LeuleuWebsite/css/: style.css
assets/LeuleuWebsite/delete/: delete-fileBEGIN.html
assets/LeuleuWebsite/upload/: upload-file.html  upload-fileBEGIN.html
cgi-bin/: hello.py
docs/: config_file.md
include/: HttpRequest.hpp  argument.hpp  options.hpp  utils.hpp
include/HttpMessages/: AHttpMessage.hpp  HttpRequest.hpp  HttpResponse.hpp
include/cgi/: CGI.hpp
include/config/: ConfigContext.hpp  ConfigFactory.hpp  ConfigLexer.hpp  ConfigParser.hpp
include/logger/: Logger.hpp  logging.hpp
include/server/: Client.hpp  Server.hpp  Socket.hpp
include/server/parser/: ConfigParser.hpp
include/utils/: utils.hpp
include/virtualServer/: Location.hpp  VirtualServer.hpp
resources/: CGI.py  leuleu.conf  webserv.conf
resources/mainWebsite/: index.html
resources/mainWebsite/cookies/: cookies.html  cookies.py
resources/mainWebsite/css/: style.css
resources/mainWebsite/curl/: curl.html
resources/mainWebsite/delete/: delete-fileBEGIN.html  delete-fileEND.html  delete.sh
resources/mainWebsite/listing-directory/abc/: abc.html
resources/mainWebsite/upload/: post.py  update.sh  upload-fileBEGIN.html
src/: HttpRequest.cpp  argument.cpp  main.cpp  options.cpp
src/HttpMessages/: AHttpMessage.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpResponseCGI.cpp
src/cgi/: CGI.cpp
src/config/: ConfigContext.cpp  ConfigFactory.cpp  ConfigLexer.cpp  ConfigParser.cpp
src/logger/: Logger.cpp  logging.cpp
src/server/: Client.cpp  Server.cpp  Socket.cpp
src/server/parser/: ConfigParser.cpp
src/utils/: coloredLog.cpp  createFile.cpp  fileExist.cpp  getDate.cpp  getPositionsOfWord.cpp  isDigitString.cpp  isDirectory.cpp  printBold.cpp  readFileToString.cpp  sleep.cpp  split.cpp  trim.cpp  updateHTML.cpp
src/virtualServer/: Location.cpp  VirtualServer.cpp
test/: benchmark.py  test_config.py  test_get_request.py
test/conf/: alias.conf  comments.conf  conflict_location.conf  conflict_servername.conf  forbidden_directive.conf  invalid_alias.conf  invalid_cgi_path.conf  invalid_ip.conf  invalid_port.conf  location_without_arg.conf  no_http_context.conf  no_open_context.conf  no_server.conf  single_line.conf  unclose_context.conf  unclose_directive.conf
